Fix issues in My Sweets page
  - The edit icons and permalink icons were overlapping. Fix them.
  - Add title popups to the icons.
  - Fix event handler to prevent default propagation.

--- a/swtstore/static/css/style.css
+++ b/swtstore/static/css/style.css
@@ -27,3 +27,6 @@
   font-size: 0.9em;
   font-style: italic;
 }
+.permalink {
+  padding-left: 3px;
+}
